// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FormFeedback > appends custom className 1`] = `
<DocumentFragment>
  <div
    class="text-base font-medium text-danger !mt-0 !-mb-4 extra-class"
  />
</DocumentFragment>
`;

exports[`FormFeedback > renders contents properly 1`] = `
<DocumentFragment>
  <div
    class="text-base font-medium text-danger !mt-0 !-mb-4"
  >
    contents
  </div>
</DocumentFragment>
`;
